# PipingHF

./: .gitignore  CFrame.py  CHANGELOG.md  CONTRIBUTING.md  CPipe.py  CUtils.py  InitGui.py  Quetzal_tooltips.py  README.md  ShpstData.py  anyShapez.py  dodoDialogs.py  dodoPM.py  fCmd.py  fFeatures.py  fForms.py  fObservers.py  pCmd.py  pFeatures.py  pForms.py  pObservers.py  package.xml  pipinghf_config.py  pyrightconfig.json  quetzal_config.py  quetzal_isometric.py  quetzal_units.py  uCmd.py  uForms.py
cut_list/: README.md  __init__.py  cut_list_commands.py  cut_list_creation.py  cut_list_ui.py  resultSpreadsheet.py
dialogz/: fbranch.ui
tablez/: Bolt_1500lb.csv  Bolt_150lb.csv  Bolt_2500lb.csv  Bolt_300lb.csv  Bolt_600lb.csv  Bolt_900lb.csv  Cap_6000lb_SW.csv  Cap_9000lb_SW.csv  Coupling_3000lb_SW.csv  Coupling_6000lb_SW.csv  Coupling_9000lb_SW.csv  Elbow_6000lb_SW.csv  Elbow_9000lb_SW.csv  Elbow_ConduitPVCSCH-40.csv  Elbow_ConduitPVCSCH-80.csv  Elbow_SCH-STD_LR45.csv  Elbow_SCH-STD_LR90.csv  Elbow_SCH-STD_SR90.csv  Elbow_SCH-XS_LR45.csv  Elbow_SCH-XS_LR90.csv  Elbow_SCH-XS_SR90.csv  Elbow_SCH-XXS_LR45.csv  Elbow_SCH-XXS_LR90.csv  Elbow_SCH-XXS_SR90.csv  Flange_ASME-BL-RF-1500lb.csv  Flange_ASME-BL-RF-150lb.csv  Flange_ASME-BL-RF-2500lb.csv  Flange_ASME-BL-RF-300lb.csv  Flange_ASME-BL-RF-600lb.csv  Flange_ASME-BL-RF-900lb.csv  Flange_ASME-LJ-STD-150lb.csv  Flange_ASME-SO-RF-150lb.csv  Flange_ASME-SO-RF-300lb.csv  Flange_ASME-SO-RF-600lb.csv  Flange_ASME-SO-RF-900lb.csv  Flange_ASME-SW-RF-150lb.csv  Flange_ASME-WN-RF-1500lb.csv  Flange_ASME-WN-RF-150lb.csv  Flange_ASME-WN-RF-2500lb.csv  (+77 more)
(+56 files in other folders)
